# system-intelligence-benchmark

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  main.py
.github/: pull_request_template.md
.github/workflows/: test.yml
benchmarks/arteval_bench/: Dockerfile  README.md  WHY.md  add_agents.md  go-python.Dockerfile  install.sh  requirements.txt  run.sh  test.sh
benchmarks/cache_algo_bench/: run.sh
benchmarks/courselab_bench/: .env.toml.example  .gitignore  README.md  pyproject.toml  run_benchmark.py
benchmarks/courselab_bench/courselab_bench/: __init__.py
benchmarks/courselab_bench/courselab_bench/agent/: __init__.py  react.py
benchmarks/courselab_bench/courselab_bench/data/: __init__.py  loader.py
benchmarks/courselab_bench/courselab_bench/environment/: __init__.py  docker.py
benchmarks/courselab_bench/courselab_bench/evaluation/: __init__.py  metrics.py  scorer.py
benchmarks/courselab_bench/courselab_bench/model/: __init__.py  litellm.py
benchmarks/courselab_bench/courselab_bench/runner/: __init__.py  executor.py  logger.py
benchmarks/courselab_bench/courselab_bench/utils/: env_loader.py
benchmarks/courselab_bench/data/: courses.json  tasks.jsonl  tasks_lite.jsonl
benchmarks/courselab_bench/tests/: test_data_schema.py
benchmarks/sregym/: .gitignore  (+6 more)
cli/: run_all_local.sh
dashboard/: proxy.py
doc/: creating_benchmark.md
kind/: kind-config-x86.yaml
logger/: __init__.py
mcp_server/: jaeger_server.py  kubectl_mcp_tools.py  submit_server.py  test_client.py
provisioner/: README.md
sregym/: agent_launcher.py
(+481 files in other folders)
